# mazerlib

./: 2DGameDevLib.vcxproj  CMakeLists.txt  CMakePresets.json  CharacterBuilder.cpp  CharacterBuilder.h  ElapsedGameTimeProvider.cpp  ElapsedGameTimeProvider.h  Enemy.cpp  Enemy.h  EnemyMovedEvent.h  EventNumber.h  GameData.cpp  GameData.h  GameDataManager.cpp  GameDataManager.h  GameObjectEventFactory.h  GameObjectMoveStrategy.cpp  GameObjectMoveStrategy.h  Level.cpp  Level.h  Player.cpp  Player.h  PlayerCollidedWithEnemyEvent.h  PlayerCollidedWithPickupEvent.h  PlayerComponent.cpp  PlayerComponent.h  Room.cpp  Room.h  RoomGenerator.cpp  RoomGenerator.h  RoomInfo.cpp  RoomInfo.h  Rooms.cpp  Rooms.h  SDLCollisionDetection.h  pickup.cpp  pickup.h  vcpkg-configuration.json  vcpkg.json
cmake/: mazerConfig.cmake
testdata/: Level1.xml  Resources.xml  settings.xml
tests/: CharacterBuilderTests.cpp  GameDataManagerTests.cpp  GameDataTests.cpp  GameObjectMoveStrategyTests.cpp  LevelGeneratorTests.cpp  LevelTests.cpp  PickupTests.cpp  PlayerTests.cpp  RoomTests.cpp
